src/assets/css/layout.css
.poster {
    height: 500px;
    width: 100%;
    background: url('../images/buddha.jpg') no-repeat center center fixed;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
}
.poster__section {
    margin-top: 70px;
    text-align: center;
    color: #fff;
}
.poster__heading {
    font-size: 2.7em;
    margin: 0;
}
.poster__subheading {
    font-size: 1.0em; 
    margin: 0;
}
.article {
    max-width: 900px;
    margin: 40px auto;
    height: 100%;
}
.section {
    padding: 10px;
    margin: 10px 60px;
    overflow: hidden;
}
.heading {
    margin: 0;
    color: darkgoldenrod;
    font-weight: normal;
    font-size: 1.4em;
}
.nobreak {
    white-space: nowrap;
}

@media (max-width: 500px) {
    .section {
        margin: 10px 20px;
    }
}

